feat: Glossary
