# internal/glossary/infrastructure/in/rest/v1/dto/glossary_type_response_dto.go
@@ -1,0 +1,12 @@
+package dto
+
+type GlossaryTypeResponseDTO struct {
+	ID          string `json:"id"`
+	TypeKey     string `json:"type_key"`
+	Label       string `json:"label"`
+	Description string `json:"description"`
+	CreatedAt   string `json:"created_at"`
+	CreatedBy   string `json:"created_by"`
+	UpdatedAt   string `json:"updated_at"`
+	UpdatedBy   string `json:"updated_by"`
+}
