# internal/shared/infrastructure/in/rest/middleware/util/constant/auth_middleware_constant.go
@@ -1,0 +1,10 @@
+package constant
+
+const (
+	AuthorizationHeader = "Authorization"
+	BearerPrefix        = "Bearer "
+)
+
+type ContextKey string
+
+const AuthenticatedUserContextKey ContextKey = "authenticatedUser"
